[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geoguessr_api"
version = "0.0.1"
authors = [
  { name="Antoine BLAISE", email="antoine.blaise34@gmail.com" },
]
description = "A API integrator for Geoguessr"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/toinoublz/geoguessr_async"