[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geoguessr_async"
version = "1.0.11"
authors = [
  { name="Antoine BLAISE", email="antoine.blaise34@gmail.com" },
]
description = "An asynchronous API integrator for Geoguessr"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "aiohttp >= 3.8.5"
]

[project.urls]
"Homepage" = "https://github.com/toinoublz/geoguessr_async"