[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geoguessr_async"
version = "2.0.1"
authors = [
  { name="Antoine BLAISE", email="antoine.blaise34@gmail.com" },
]
description = "An asynchronous API integrator for Geoguessr"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "aiohttp >= 3.8.5"
]

[project.urls]
"Homepage" = "https://github.com/toinoublz/geoguessr_async"

[tool.black]
line-length = 120

[tool.ruff]
select = ["ASYNC"]
ignore = []

[tool.flake8]
ignore = ["E501"]
max-line-length = 120
